--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,23 +8,20 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "About Me"
+    url: /about-Me/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Publications"
+    url: /publications/    
 
   - title: "Teaching"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
+         
+  - title: "Honors and Awards"
     url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
+
+  - title: "Conference Experiences"
+    url: /conference-experiences/
     
   # - title: "CV"
   #   url: /cv-json/
