--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,20 +8,23 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "About Me"
-    url: /about-Me/
-
   - title: "Publications"
-    url: /publications/    
+    url: /publications/
+
+  - title: "Talks"
+    url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
-         
-  - title: "Honors and Awards"
+    
+  - title: "Portfolio"
+    url: /portfolio/
+        
+  - title: "Blog Posts"
     url: /year-archive/
-
-  - title: "Conference Experiences"
-    url: /conference-experiences/
+    
+  - title: "CV"
+    url: /cv/
     
   # - title: "CV"
   #   url: /cv-json/
