--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Hui (Amy) Rao"
   pronouns         : # example: "she/her"  
-  bio              : "PhD student at The University of Melbourne"
+  bio              : "PhD Student at The University of Melbourne"
   location         : "Melbourne, VIC, Australia"
   employer         : "The University of Melbourne"
   uri              : # URL
