--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Hui (Amy) Rao"
+  linkedin         : "https://www.linkedin.com/in/hui-rao-9a30642b6/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
